--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,10 +27,10 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  display: block;
   min-width: 320px;
   min-height: 100vh;
+  background: #FFF;
 }
 
 h1 {
